# poc-cors

./: README.adoc  docker-compose.yaml
.telematik/: docker-compose.yaml
.telematik/nginx/: cors-ui.h3.spilikin.dev.conf  konnektor.h3.spilikin.dev.conf
cors-proxy/: Dockerfile  generate_diagrams.py  main.py  pyproject.toml  requirements.sh  requirements.txt  soap.py
cors-ui/: Dockerfile  README.md  package.json  vue.config.js
cors-ui/src/: App.vue
cors-ui/src/router/: index.ts
cors-ui/src/store/: index.ts
cors-ui/src/telematik/: KonnektorAPI.ts
cors-ui/src/views/: GetCardsView.vue  HomeView.vue
