[tool.poetry]
name = "cors_proxy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "cors" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
requests = "^2.28.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
zeep = "^4.1.0"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
